--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,17 @@
   --primary: #39db7d;
   --border-color: #80a59042;
   --pri-color: #74817f;
+  --primary-bg-transp: #39db7d2b;
+
+
+  /* color: #003656;
+  --main-bg: #f6fcff;
+  --sec-bg: #e4f5ff;
+  --ter-bg: #cee9f9;
+  --primary: #0074b9;
+  --border-color: #c6ddeb;
+  --pri-color: #188d7b;
+  --primary-bg-transp: #7fcdfb; */
 }
 
 
