--- a/src/frontend/Login.css
+++ b/src/frontend/Login.css
@@ -78,7 +78,7 @@
 	color: var(--color);
 	background: var(--sec-bg);
 	outline: none;
-	border: 2px solid #304750;
+	border: 2px solid var(--primary-bg-transp);;
 	border-radius: 5px;
 	box-sizing: border-box;
 	padding: 2px 8px;
