--- a/src/frontend/Login.css
+++ b/src/frontend/Login.css
@@ -128,6 +128,7 @@ border-color: var(--primary);
 }
 
 .logIn{
+	position: relative;
 	background: var(--primary);
 	color: var(--main-bg);
 	font-size: 18px;
@@ -135,6 +136,34 @@ border-color: var(--primary);
 	padding: 8px;
 	border-radius: 5px;
 	cursor: pointer;
-	margin-top: 6%;
+	/* margin-top: 6%; */
 	border: 0;
+}
+.logIn:disabled{
+	background: var(--color);
+}
+
+.logIn > img{
+	width: 10px;
+}
+
+.logIn > .loading{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 0%;
+	height: 100%;
+	background: #9fffc89e;
+	border-radius: 5px;
+	animation: loadingAnima 3000ms cubic-bezier(0.4, 0, 0.2, 1) infinite forwards;
+}
+
+@keyframes loadingAnima {
+	0%{ width: 0%;}
+	10%{ width: 10%;}
+	30%{ width: 30%;}
+	40%{ width: 40%;}
+	50%{ width: 50%;}
+	80%{ width: 80%;}
+	100%{ width: 100%;}
 }
