--- a/src/frontend/Body/Inventory/AddProduct.css
+++ b/src/frontend/Body/Inventory/AddProduct.css
@@ -10,6 +10,7 @@
     animation-fill-mode: forwards;
     overflow: hidden;
     box-sizing: border-box;
+    --addProd-border-color: #444444;
 }
 /* .up{
     height: 100vh;
@@ -62,10 +63,14 @@
 .sub-head{
     color: var(--pri-color);
     margin-top: 10px;
+    font-weight: 500;
+    font-size: 16px;
 }
 .mod-heading{
     color: var(--pri-font-color);
     margin-top: 10px;
+    font-weight: 700;
+    font-size: 22px;
 }
 
 .mod-body-left{
@@ -158,4 +163,37 @@
     to{
         box-shadow: 0px 0px 12px var(--primary);
     }
+}
+
+
+/* ------ Box -------- */
+
+.modal-mid-cont{
+    display: flex;
+    margin-top: 24px;
+}
+
+.mbr-box1{
+    padding: 15px 25px;
+    position: relative;
+    background: var(--sec-bg);
+    width: 60%;
+    height: 350px;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+.img-box > span {
+    text-align: left;
+}
+.img-box{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.img-select{
+    border: 1px solid var(--addProd-border-color);
+    width: 100%;
+    height: 160px;
+    border-radius: 5px;
 }
