--- a/src/frontend/Body/Inventory/Inventory.css
+++ b/src/frontend/Body/Inventory/Inventory.css
@@ -312,7 +312,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    cursor: pointer;
 }
+
 .FilterBtns-active{
     border-color: var(--primary);
     background: var(--ter-bg);
@@ -321,6 +323,7 @@
 .FilterBtns > label{
     font-family: 'Nunito', sans-serif;
     font-weight: 500;
+    cursor: pointer;
 }
 .filt-prod-count{
     font-size: 10px;
