--- a/src/frontend/Body/Body.css
+++ b/src/frontend/Body/Body.css
@@ -5,3 +5,14 @@
     padding-top: 1%;
     box-sizing: border-box;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    /* Your CSS properties here */
+    display: block;
+    font-size: unset;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
