--- a/src/frontend/Body/Inventory/Inventory.css
+++ b/src/frontend/Body/Inventory/Inventory.css
@@ -397,7 +397,7 @@
     /* gap: 5px; */
     color: var(--pri-font-color);
     font-size: 14px;
-    text-align: center;
+    /* text-align: center; */
     border-radius: 10px;
     height: 0px;
     padding: 0;
@@ -410,6 +410,7 @@
     padding: 8px 5px;
     border-radius: 5px;
     transition: none !important;
+    padding-left: 15px;
     /* border-bottom: 1px solid var(--border-color); */
 }
 .selectbox-opt-cont > span:hover{
